Fix media queries used in the admin skeleton
Since we added the left-side navigation our media queries haven't been
accounted for. This commit fixes an issue where content would be off the
page and a horizontal scroll bar would appear.

--- a/backend/app/assets/stylesheets/spree/backend/shared/_skeleton.scss
+++ b/backend/app/assets/stylesheets/spree/backend/shared/_skeleton.scss
@@ -76,7 +76,7 @@
 
     /* Note: Design for a width of 768px */
 
-    @media only screen and (min-width: 768px) and (max-width: 959px) {
+    @media only screen and (min-width: 768px + $width-sidebar) and (max-width: 959px + $width-sidebar) {
         .container                                  { width: 768px; }
         .container .column,
         .container .columns                         { margin-left: 10px; margin-right: 10px;  }
@@ -129,7 +129,7 @@
 
     /* Note: Design for a width of 320px */
 
-    @media only screen and (max-width: 767px) {
+    @media only screen and (max-width: 767px + $width-sidebar) {
         .container { width: 300px; }
         .container .columns,
         .container .column { margin: 0; }
@@ -179,7 +179,7 @@
 
     /* Note: Design for a width of 480px */
 
-    @media only screen and (min-width: 480px) and (max-width: 767px) {
+    @media only screen and (min-width: 480px + $width-sidebar) and (max-width: 767px + $width-sidebar) {
         .container { width: 420px; }
         .container .columns,
         .container .column { margin: 0; }
